# risb-Sparse

./: pyproject.toml
examples/: checkboard_Hubbard_test.ipynb  decorated_honeycomb.py
src/risb_sparse/: __init__.py  helpers_triqs.py  solve_lattice_ED.py
src/risb_sparse/embedding/: SolveEmbeddingSparse.py  __init__.py
src/risb_sparse/kweight/: from_triqs_hartree.py
