[project]
name = "risb-sparse"
version = "0.1.0"
description = "Modified RISB library with self-defined exact diagonalization solver of the embedding impurity problem."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["quantum", "RISB", "slave bosons", "embedding", "strong correlation"]
authors = [
  {name = "H. L. Nourse"},
  {name = "Chenrui Wang"}
]
dependencies = [
  "numpy",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/Chenrui2018-cr/risb-sparse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/risb_sparse"]
